--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,12 @@
 .lib/
 dist/*
 
-target/
+# target/
+
+target/resolution-cache/
+target/streams/
+target/test-reports/
+target/.history
 
 target/scala-2.11/api/
 target/scala-2.11/classes/
@@ -16,10 +21,11 @@ target/scala-2.11/resource_managed/
 target/scala-2.11/src_managed/
 target/scala-2.11/test-classes/
 
-target/resolution-cache/
-target/streams/
-target/test-reports/
-target/.history
+target/scala-2.10/api/
+target/scala-2.10/classes/
+target/scala-2.10/resource_managed/
+target/scala-2.10/src_managed/
+target/scala-2.10/test-classes/
 
 resources/info/collaboration_station/
 
@@ -39,26 +45,4 @@ project/plugins/project/
 .classpath
 .project
 
-# Created by .ignore support plugin (hsz.mobi)
-project/target/config-classes/$4f46e845c7a4ed1ccaf6.cache
-project/target/scala-2.10/
-project/target/streams/compile/incCompileSetup/
-src/main/resources/
-src/test/resources/
-src/test/scala-2.10/
-src/test/scala-2.11/
-target/scala-2.10/api/scala/trace/Macro$$assertCode$.html
-target/scala-2.10/api/scala/trace/Macro$$checkCode$.html
-target/scala-2.10/api/scala/trace/Macro$$codeErr$.html
-target/scala-2.10/api/scala/trace/Macro$$codeOut$.html
-target/scala-2.10/api/scala/trace/Macro$$desugarErr$.html
-target/scala-2.10/api/scala/trace/Macro$$desugarOut$.html
-target/scala-2.10/api/scala/trace/Macro$.html
-target/scala-2.10/classes/
-target/scala-2.10/ivy-3.0.0.xml
-target/scala-2.10/scala-trace-debug_2.10-3.0.0-javadoc.jar
-target/scala-2.10/scala-trace-debug_2.10-3.0.0-sources.jar
-target/scala-2.10/scala-trace-debug_2.10-3.0.0.jar
-target/scala-2.10/scala-trace-debug_2.10-3.0.0.pom
-target/scala-2.10/test-classes/
-target/scala-2.11/
+project/target/
