--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,15 @@
 language: scala
 sudo: false
 scala:
-  - 2.10.4
-  - 2.11.2
+  - 2.10.6
+  - 2.11.7
+  - 2.12.0
 jdk:
+  - openjdk7
+  - openjdk8
   - oraclejdk8
-  - oraclejdk7
+matrix:
+  exclude:
+    - scala: 2.12.0
+      jdk: openjdk7
+sudo: false
